dgkanatsios-labs/test2/bb.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2021-09-17T12:39:03Z"
  labels:
    run: bbb3
  name: bbb3
  namespace: default
  resourceVersion: "624697"
  uid: 51760ff9-4695-4c41-8455-d2da285298df
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - wget -O- 10.103.73.175:6262
    image: busybox
    imagePullPolicy: Always
    name: bbb3
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-mb4wm
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: minikube
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Never
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-mb4wm
    secret:
      defaultMode: 420
      secretName: default-token-mb4wm
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-09-17T12:39:03Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-09-17T12:39:09Z"
    message: 'containers with unready status: [bbb3]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-09-17T12:39:09Z"
    message: 'containers with unready status: [bbb3]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-09-17T12:39:03Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://75c695a781a4869c9d8e149dc4a552eabcbcaa2391ceb2b88effae3f42df9194
    image: busybox:latest
    imageID: docker-pullable://busybox@sha256:52f73a0a43a16cf37cd0720c90887ce972fe60ee06a687ee71fb93a7ca601df7
    lastState: {}
    name: bbb3
    ready: false
    restartCount: 0
    started: false
    state:
      terminated:
        containerID: docker://75c695a781a4869c9d8e149dc4a552eabcbcaa2391ceb2b88effae3f42df9194
        exitCode: 1
        finishedAt: "2021-09-17T12:39:08Z"
        reason: Error
        startedAt: "2021-09-17T12:39:07Z"
  hostIP: 192.168.64.2
  phase: Failed
  podIP: 172.17.0.4
  podIPs:
  - ip: 172.17.0.4
  qosClass: BestEffort
  startTime: "2021-09-17T12:39:03Z"
