dgkanatsios-labs/test2/cc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cc
  name: cc
spec:
  containers:
  - image: nginx
    name: cc
    resources: {}
  nodeSelector:
    accelerator: nvidia-tesla-p100
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
