dgkanatsios-labs/test2/cm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: foo
      mountPath: /etc/lala
  volumes:
  - name: foo
    configMap:
      name: cmvol
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
