dgkanatsios-labs/test2/mm.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mm
  name: mm
spec:
  containers:
  - name: my-nginx
    image: nginx
    ports:
        - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: vol
  volumes:
  - name: vol
    emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
