dgkanatsios-labs/test2/ss.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: ss
  name: ss
spec:
  serviceAccountName: myuser
  containers:
  - image: nginx
    name: ss
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
