dgkanatsios-labs/test2/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: envar-demo
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: envar-demo-container
    image: gcr.io/google-samples/node-hello:1.0
    ports:
    - containerPort: 80
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
